# ESP32-S3-Touch-LCD-3.49-template

./: .gitignore  ARCHITECTURE_MIGRATION_PLAN.md  BEST_PRACTICES_REVIEW.md  CMakeLists.txt  CODE_REVIEW_2026-07-09.md  ESP_WIFI_CONFIG_OPTIMIZATION_PLAN.md  REFACTOR_PLAN.md  REFACTOR_SUGGESTIONS.md  REFACTOR_SUMMARY.md  build_log.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old  update_app_cfg.py
.codebuddy/plans/: wifi_event_bridge_phase1_6680c83b.md
.trae/documents/: esp_wifi_config_migration_plan.md  webui_esp_wifi_config_integration_plan.md
.trae/skills/karpathy-guidelines/: SKILL.md
components/audio_bsp/: user_audio_bsp.c  user_audio_bsp.h
components/audio_min/: CMakeLists.txt  audio_min.c  audio_min.h
components/i2c_bsp/: i2c_bsp.c  i2c_bsp.h
components/i2c_equipment/: i2c_equipment.h
components/radio/: radio.c  radio.h
components/recorder/: CMakeLists.txt  recorder.c  recorder.h
components/sdcard_bsp/: sdcard_bsp.c  sdcard_bsp.h
components/webui/: CMakeLists.txt  webui.c  webui.h
docs/: CLI-Commands.md  PROJECT_WIKI.md
main/: CMakeLists.txt  CODE_ANALYSIS.md  app_cfg.c  app_cfg.h  bg_fetcher.c  cli.c  disp_driver.c  disp_driver.h  font_jbmono_64.c  hw_init.h  i18n_strings.h  idf_component.yml  main.cpp  sntp_manager.c  system_monitor.h  tz_cities.h  ui_bg_fetcher.c  ui_bg_fetcher.h  ui_clock.c  ui_clock.h  ui_common.h  ui_main.c  ui_main.h  ui_quotes.c  ui_quotes.h  ui_radio.h  ui_recorder.h  ui_settings.c  user_config.h  wifi_manager.c  wifi_manager.h  wifi_secret.example.h
main/config/: app_cfg.c  app_cfg.h  app_info.h  config.c  config.h
main/data/: config.c  config.h  data_source.c  data_source.h  fan_control.c  fan_control.h  nas_config.h  nas_data.h  nas_data_json.c  nas_data_json.h  nas_event_loop.c  nas_event_loop.h
main/data/client/: api_client.c  api_client.h  mock_client.c  mock_client.h  netdata_client.c  netdata_client.h  qnap_client.c  qnap_client.h  serial_client.c  serial_client.h  snmp_client.c  snmp_client.h  synology_client.c  synology_client.h  truenas_client.c  truenas_client.h
main/drivers/: disp_driver.c  disp_driver.h
main/fonts/: font_jbmono_48.c  font_jbmono_64.c
main/network/: bg_fetcher.h  sntp_manager.c  sntp_manager.h  wifi_manager.c  wifi_manager.h  wifi_provision.c  wifi_provision.h  wifi_provision_dns.c  wifi_provision_dns.h  wifi_provision_http.c  wifi_provision_http.h
main/ui/: backlight.h  ui.c  ui.h  ui_audio_test.c  ui_audio_test.h  ui_clock.c  ui_clock.h  ui_common.h  ui_events.c  ui_events.h  ui_hello.c  ui_hello.h  ui_helpers.c  ui_helpers.h  ui_main.c  ui_main.h  ui_quotes.c  ui_quotes.h  ui_radio.c  ui_radio.h  ui_recorder.c  ui_recorder.h  ui_settings.c  ui_settings.h  ui_settings_guide.c  ui_settings_guide.h  ui_settings_internal.h  ui_settings_music.c  ui_settings_music.h  ui_settings_region.c  ui_settings_region.h  ui_settings_screen.c  ui_settings_screen.h  ui_settings_station.c  ui_settings_station.h  ui_settings_wifi.c  ui_settings_wifi.h  ui_state.c  ui_state.h  ui_wifi_config.c
main/ui/fonts/: font_jbmono_24.c  font_jbmono_96.c
main/ui/old/: ui_clock.c  ui_clock.h  ui_hello.c  ui_hello.h  ui_settings.c  ui_settings.h  ui_wifi_config.h
main/ui/screens/: ui_Screen_Boot.c  ui_Screen_Boot.h  ui_Screen_DiskDetail.c  ui_Screen_DiskDetail.h  ui_Screen_Overview.c  ui_Screen_Overview.h  ui_Screen_Settings.c  ui_Screen_Settings.h  ui_Screen_Settings_FanTab.c  ui_Screen_Settings_FanTab.h  ui_Screen_Settings_GuideTab.c  ui_Screen_Settings_GuideTab.h  ui_Screen_Settings_MusicTab.c  ui_Screen_Settings_MusicTab.h  ui_Screen_Settings_NasTab.c  ui_Screen_Settings_NasTab.h  ui_Screen_Settings_RegionTab.c  ui_Screen_Settings_RegionTab.h  ui_Screen_Settings_ScreenTab.c  ui_Screen_Settings_ScreenTab.h  ui_Screen_Settings_StationTab.c  ui_Screen_Settings_StationTab.h  ui_Screen_Settings_WifiTab.c  ui_Screen_Settings_WifiTab.h  ui_Screen_Storage.c  ui_Screen_Storage.h  ui_Screen_SystemDetail.c  ui_Screen_SystemDetail.h  ui_Screen_WifiConfig.c  ui_Screen_WifiConfig.h
main/utils/: backlight.c  bg_fetcher.c  cli.c  cli.h  event_bus.c  event_bus.h  http_timer.c  http_timer.h  hw_init.c  hw_init.h  i18n.c  i18n.h  i18n_strings.h  landmask.h  system_monitor.c  theme.c  theme.h  tz_utils.c  tz_utils.h  wifi_adapter.c  wifi_adapter.h  wifi_bridge.c  wifi_bridge.h
scripts/: gen_i18n.py  gen_tz.py  translations.py
