string(TIMESTAMP BUILD_EPOCH_UTC "%s" UTC)

idf_component_register(
    SRCS
        "main.cpp"
        "ui/ui.c"
        "ui/ui_helpers.c"
        "ui/ui_events.c"
        "ui/ui_hello.c"
        "ui/ui_clock.c"
        "ui/ui_quotes.c"
        "ui/ui_settings.c"
        "ui/screens/ui_Screen_Boot.c"
        "ui/screens/ui_Screen_Overview.c"
        "ui/screens/ui_Screen_Settings.c"
        "ui/screens/ui_Screen_Storage.c"
        "ui/fonts/ui_font_NotoSanThai16.c"
        "ui/images/ui_img_images_button_png.c"
        "ui/images/ui_img_images_globe_png.c"
        "ui/images/ui_img_images_timezone_png.c"
        "drivers/disp_driver.c"
        "network/wifi_manager.c"
        "network/sntp_manager.c"
        "config/app_cfg.c"
        "utils/event_bus.c"
        "utils/i18n.c"
        "utils/theme.c"
        "utils/cli.c"
        "utils/hw_init.c"
        "utils/system_monitor.c"
        "utils/bg_fetcher.c"
        "utils/http_timer.c"
        "data/config.c"
        "data/data_source.c"
        "data/nas_event_loop.c"
        "data/nas_data_json.c"
        "data/client/mock_client.c"
        "data/client/api_client.c"
        "data/client/synology_client.c"
        "data/client/netdata_client.c"
        "data/client/truenas_client.c"
        "data/client/qnap_client.c"
        "data/client/serial_client.c"
        "data/client/snmp_client.c"
        "fonts/font_jbmono_24.c"
        "fonts/font_jbmono_48.c"
        "fonts/font_jbmono_64.c"
        "fonts/font_jbmono_96.c"
        "fonts/font_cjk_14.c"
    INCLUDE_DIRS
        "."
        "ui"
        "drivers"
        "network"
        "config"
        "utils"
        "fonts"
        "data"

)

target_compile_definitions(${COMPONENT_LIB} PRIVATE BUILD_EPOCH_UTC=${BUILD_EPOCH_UTC})