string(TIMESTAMP BUILD_EPOCH_UTC "%s" UTC)

idf_component_register(
    SRCS
        "main.cpp"
        "ui/ui.c"
        "ui/ui_helpers.c"
        "ui/ui_events.c"
        "ui/screens/ui_Screen_Settings_WifiTab.c"
        "ui/screens/ui_Screen_Settings_NasTab.c"
        "ui/screens/ui_Screen_Settings_ScreenTab.c"
        "ui/screens/ui_Screen_Settings_StationTab.c"
        "ui/screens/ui_Screen_Settings_MusicTab.c"
        "ui/screens/ui_Screen_Settings_RegionTab.c"
        "ui/screens/ui_Screen_Settings_GuideTab.c"
        "ui/screens/ui_Screen_Boot.c"
        "ui/screens/ui_Screen_WifiConfig.c"
        "ui/screens/ui_Screen_Overview.c"
        "ui/screens/ui_Screen_Settings.c"
        "ui/screens/ui_Screen_Storage.c"
        "ui/fonts/ui_font_NotoSanThai16.c"
        "ui/images/ui_img_images_button_png.c"
        "ui/images/ui_img_images_globe_png.c"
        "ui/images/ui_img_images_timezone_png.c"
        "drivers/disp_driver.c"
        "network/wifi_manager.c"
        "network/sntp_manager.c"
        "network/wifi_provision.c"
        "network/wifi_provision_dns.c"
        "network/wifi_provision_http.c"
        "config/app_cfg.c"
        "utils/event_bus.c"
        "utils/i18n.c"
        "utils/theme.c"
        "utils/cli.c"
        "utils/hw_init.c"
        "utils/bg_fetcher.c"
        "utils/http_timer.c"
        "config/config.c"
        "data/data_source.c"
        "data/nas_event_loop.c"
        "data/nas_data_json.c"
        "data/client/mock_client.c"
        "data/client/api_client.c"
        "data/client/synology_client.c"
        "data/client/netdata_client.c"
        "data/client/truenas_client.c"
        "data/client/qnap_client.c"
        "data/client/serial_client.c"
        "data/client/snmp_client.c"
        "ui/fonts/font_jbmono_24.c"
        "ui/fonts/font_jbmono_48.c"
        "ui/fonts/font_jbmono_64.c"
        "ui/fonts/font_jbmono_96.c"
        "ui/fonts/font_cjk_14.c"
    INCLUDE_DIRS
        "."
        "ui"
        "drivers"
        "network"
        "config"
        "utils"
        "data"

)

target_compile_definitions(${COMPONENT_LIB} PRIVATE BUILD_EPOCH_UTC=${BUILD_EPOCH_UTC})